
Package: R.utils
================

Version: 1.0.8 [2008-10-16]
o BUG FIX: Argument 'type' of devNew() did not take function:s.


Version: 1.0.7 [2008-09-20]
o Added mapToIntervals(), inAnyInterval(), and mergeIntervals().


Version: 1.0.6 [2008-09-08]
o Now devNew() filters out arguments 'file' and 'filename' if the
  device is interactive.


Version: 1.0.5 [2008-08-04]
o Now commandArgs(...) pass '...' to base::commandArgs() making it
  fully backward compatible.  It is also updated to recognize all
  R command line options as of R v2.7.1 and R v2.8.0 devel.


Version: 1.0.4 [2008-08-01]
o Now sourceDirectory() is guaranteed to source directories and files 
  in lexicographic order.
o Added countLines() for counting number of lines in a text file.
o Added several functions for extending the current functions dealing
  with devices.  All added functions can address a device by a label
  in addition to the standard device index.  The devGetLabel() and
  devSetLabel() gets and sets the label of a give device.  devList()
  lists the indices of existing device named by their labels, cf.
  dev.list().  The functions devSet() and devOff() work like 
  dev.set() and dev.off() but accept labels as well.  Furthermore, 
  devSet(idx) will open a device with index 'idx' if it does not 
  exists, and devSet(label) a device with that label if not already
  opened.  The devIsOpen() checks if a device is open or not. The 
  devDone() function calls devOff() except for screen devices.


Version: 1.0.3 [2008-07-10]
o Added readBinFragments() and writeBinFragments() to read and write
  binary data scattered across a connection or a file.  These methods
  moved from the R.huge package.
o Added intervalsToSeq(), which is bijective to seqToIntervals().
o Added whichVector(), which is almost twice as fast which() for
  logical vectors, especially when there are no missing values.
o IMPROVEMENT: Major speed up of seqToIntervals().  
o Added gzip().